# microblog

./: .gitignore  README.md  config.py  pyproject.toml  tests.py
app/: __init__.py  email.py  forms.py  models.py  routes.py
migrations/versions/: 539cb3488604_users_table.py  6fc6fccd947a_posts_table.py
templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  reset_password.html  user.html
templates/email/: reset_password.html  reset_password.txt
