[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["LMarika <mari.fm.ry@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
